; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_function.c_make_slot_available.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_function.c_make_slot_available.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.temp_slot = type { i32, i64 }

@avail_temp_slots = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.temp_slot*)* @make_slot_available to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @make_slot_available(%struct.temp_slot* %0) #0 {
  %2 = alloca %struct.temp_slot*, align 8
  store %struct.temp_slot* %0, %struct.temp_slot** %2, align 8
  %3 = load %struct.temp_slot*, %struct.temp_slot** %2, align 8
  %4 = load %struct.temp_slot*, %struct.temp_slot** %2, align 8
  %5 = getelementptr inbounds %struct.temp_slot, %struct.temp_slot* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = call i32 @temp_slots_at_level(i32 %6)
  %8 = call i32 @cut_slot_from_list(%struct.temp_slot* %3, i32 %7)
  %9 = load %struct.temp_slot*, %struct.temp_slot** %2, align 8
  %10 = call i32 @insert_slot_to_list(%struct.temp_slot* %9, i32* @avail_temp_slots)
  %11 = load %struct.temp_slot*, %struct.temp_slot** %2, align 8
  %12 = getelementptr inbounds %struct.temp_slot, %struct.temp_slot* %11, i32 0, i32 1
  store i64 0, i64* %12, align 8
  %13 = load %struct.temp_slot*, %struct.temp_slot** %2, align 8
  %14 = getelementptr inbounds %struct.temp_slot, %struct.temp_slot* %13, i32 0, i32 0
  store i32 -1, i32* %14, align 8
  ret void
}

declare dso_local i32 @cut_slot_from_list(%struct.temp_slot*, i32) #1

declare dso_local i32 @temp_slots_at_level(i32) #1

declare dso_local i32 @insert_slot_to_list(%struct.temp_slot*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
